--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "test": "jest",
     "lint": "ng lint"
   },
   "private": true,
@@ -36,6 +36,7 @@
     "primeng": "^19.0.5",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.0.3",
+    "ts-node": "^10.9.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -43,17 +44,13 @@
     "@angular-devkit/build-angular": "^19.0.7",
     "@angular/cli": "^19.0.7",
     "@angular/compiler-cli": "^19.0.0",
-    "@types/jasmine": "~5.1.0",
+    "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.15",
     "@types/node": "^22.13.1",
     "angular-eslint": "19.0.2",
     "eslint": "^9.16.0",
-    "jasmine-core": "~5.4.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
+    "jest": "^29.7.0",
+    "jest-preset-angular": "^14.5.1",
     "typescript": "~5.6.2",
     "typescript-eslint": "8.18.0"
   }
